Duplicate node shown in outliner's datablock display #39934

Closed
opened 2014-04-28 14:31:19 +02:00 by Willi · 8 comments

System Information
Win7/64

Blender Version
2.70a official

Short description of error
A minor issue: In the outliner window, Datablocks view, the node

 Scenes -> <Scene> -> Sequence Editor -> Sequence Editor -> Sequences

appears twice.

Bild_314.JPG

Exact steps for others to reproduce the error

  • In a new project, add any strip to the VSE
  • In the outliner window, Datablocks view, navigate to Scenes -> Scene -> Sequence Editor -> Sequence Editor

The sub node "Sequences" is shown twice. Sorry, if there's a difference between the two nodes, but they look identical.

**System Information** Win7/64 **Blender Version** 2.70a official **Short description of error** A minor issue: In the outliner window, Datablocks view, the node ``` Scenes -> <Scene> -> Sequence Editor -> Sequence Editor -> Sequences ``` appears twice. ![Bild_314.JPG](https://archive.blender.org/developer/F86278/Bild_314.JPG) **Exact steps for others to reproduce the error** - In a new project, add any strip to the VSE - In the outliner window, Datablocks view, navigate to Scenes -> Scene -> Sequence Editor -> Sequence Editor The sub node "Sequences" is shown twice. Sorry, if there's a difference between the two nodes, but they look identical.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2

Added subscriber: @mont29

Added subscriber: @mont29

This is not a bug, rather a naming glitch, one will list all strips (included those in metastrips), while the other will only list top-level strips… Will rename the 'all' one.

This is not a bug, rather a naming glitch, one will list **all** strips (included those in metastrips), while the other will only list top-level strips… Will rename the 'all' one.
Bastien Montagne self-assigned this 2014-04-28 16:35:58 +02:00

This issue was referenced by blender/blender-addons-contrib@49a5c57957

This issue was referenced by blender/blender-addons-contrib@49a5c579572410f827a55f2df568cecb24acf76f

This issue was referenced by 49a5c57957

This issue was referenced by 49a5c579572410f827a55f2df568cecb24acf76f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 49a5c57957.

Closed by commit 49a5c57957.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39934
No description provided.