Fix T39934: Duplicate node shown in outliner's datablock display

Not good to have two different things named the same way! :P