source/blender/makesrna/intern/rna_sequencer.c
@@ -1559,13 +1559,13 @@ static void rna_def_editor(BlenderRNA *brna)
 	prop = RNA_def_property(srna, "sequences", PROP_COLLECTION, PROP_NONE);
 	RNA_def_property_collection_sdna(prop, NULL, "seqbase", NULL);
 	RNA_def_property_struct_type(prop, "Sequence");
-	RNA_def_property_ui_text(prop, "Sequences", "");
+	RNA_def_property_ui_text(prop, "Sequences", "Top-level strips only");
 	RNA_api_sequences(brna, prop);
 
 	prop = RNA_def_property(srna, "sequences_all", PROP_COLLECTION, PROP_NONE);
 	RNA_def_property_collection_sdna(prop, NULL, "seqbase", NULL);
 	RNA_def_property_struct_type(prop, "Sequence");
-	RNA_def_property_ui_text(prop, "Sequences", "");
+	RNA_def_property_ui_text(prop, "All Sequences", "All strips, recursively including those inside metastrips");
 	RNA_def_property_collection_funcs(prop, "rna_SequenceEditor_sequences_all_begin",
 	                                  "rna_SequenceEditor_sequences_all_next", NULL, NULL, NULL, NULL, NULL, NULL);
 
